--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "github-portfolio",
-  "description": "Portfolio of Abu Said - Github profile",
+  "name": "personal-portfolio",
+  "description": "Portfolio of Radhika Mishra - Github profile",
   "version": "0.1.0",
   "private": true,
   "scripts": {
